[tool.poetry]
name = "lab2.18"
version = "0.0.4"
description = ""
authors = ["magdaevdalambek <you@example.com>"]
license = "MIT LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
python-dotenv = "^1.0.1"
pre-commit = "^3.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[tool.black]
line-length = 79
exclude = '''
(
    __pycache__
)
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
